--- a/index.html
+++ b/index.html
@@ -5,161 +5,185 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise Tracker</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-        }
-        body, html {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #f3f4f6;
-            color: #333;
-            overflow: hidden;
-        }
-        .page {
-            width: 100%;
-            height: 100%;
-            display: none;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            text-align: center;
-            padding: 20px;
-        }
-        .active {
-            display: flex;
-        }
+  <style>
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto', sans-serif;
+    }
+    body, html {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f3f4f6;
+        color: #333;
+        overflow: hidden;
+    }
+    .page {
+        width: 100%;
+        height: 100%;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        padding: 20px;
+    }
+    .active {
+        display: flex;
+    }
+    h1 {
+        font-size: 2.5rem;
+        color: #0056b3;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+    label {
+        font-size: 1.8rem;
+        margin-bottom: 1.5rem;
+        color: #333;
+        text-align: center;
+        width: 100%;
+    }
+    select, input, button {
+        font-size: 1.8rem;
+        margin: 1rem 0;
+        padding: 12px 15px;
+        width: 90%;
+        max-width: 400px;
+        border-radius: 8px;
+        border: none;
+        outline: none;
+        transition: all 0.3s ease;
+        text-align: center;
+    }
+    select, input {
+        background-color: #e0e0e0;
+        color: #333;
+    }
+    button {
+        background-color: #0056b3;
+        color: #fff;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    button:hover {
+        background-color: #003e8a;
+    }
+    /* Countdown Timer Styling */
+    #countdown {
+        font-size: 5rem;
+        color: #FF0000;
+        animation: fade 1s ease;
+        z-index: 10;
+        margin-bottom: 20px;
+    }
+    @keyframes fade {
+        from { opacity: 1; }
+        to { opacity: 0; }
+    }
+    /* Camera Page Styling */
+    #video-container {
+        position: relative;
+        width: 100%;
+        max-width: 400px;
+        aspect-ratio: 4/3;
+        margin-top: 10px;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+    video, canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    #counter {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-size: 1.5rem;
+        color: #ffffff;
+        background: rgba(0, 0, 0, 0.7);
+        padding: 10px;
+        border-radius: 8px;
+        z-index: 5;
+    }
+    #status {
+        font-size: 1.8rem;
+        color: #0056b3;
+        text-align: center;
+        margin-top: 15px;
+    }
+    /* Progress Bar Styling */
+    .progress-container {
+        width: 100%;
+        max-width: 400px;
+        height: 15px;
+        background-color: #e0e0e0;
+        border-radius: 12px;
+        overflow: hidden;
+        margin-top: 15px;
+    }
+    .progress-bar {
+        height: 100%;
+        background-color: #0056b3;
+        width: 0%;
+        transition: width 0.3s ease;
+    }
+    /* Exercise Completed Page */
+    .completed-message {
+        font-size: 2.5rem;
+        color: #28a745;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .home-button {
+        font-size: 1.5rem;
+        padding: 15px 30px;
+        background-color: #0056b3;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    .home-button:hover {
+        background-color: #003e8a;
+    }
+
+    /* Adjustments for smaller screens */
+    @media (max-width: 768px) {
         h1 {
-            font-size: 3rem;
-            color: #0056b3;
-            margin-bottom: 2rem;
-            text-align: center;
+            font-size: 2rem;
         }
         label {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-            color: #333;
-            text-align: center;
-            width: 100%;
+            font-size: 1.5rem;
         }
         select, input, button {
-            font-size: 2rem;
-            margin: 1rem 0;
-            padding: 15px 20px;
-            width: 80%;
-            max-width: 600px;
-            border-radius: 8px;
-            border: none;
-            outline: none;
-            transition: all 0.3s ease;
-            text-align: center;
-        }
-        select, input {
-            background-color: #e0e0e0;
-            color: #333;
-        }
-        button {
-            background-color: #0056b3;
-            color: #fff;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #003e8a;
-        }
-        /* Countdown Timer Styling */
-        #countdown {
-            position: absolute;
-            font-size: 8rem;
-            color: #FF0000;
-            animation: fade 1s ease;
-            z-index: 10;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        @keyframes fade {
-            from { opacity: 1; }
-            to { opacity: 0; }
-        }
-        /* Camera Page Styling */
-        #video-container {
-            position: relative;
-            width: 100%;
-            max-width: 800px;
-            aspect-ratio: 4/3;
-            margin-top: 10px;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-        video, canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            font-size: 1.5rem;
+            padding: 10px 12px;
         }
         #counter {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            font-size: 2rem;
-            color: #ffffff;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 15px;
-            border-radius: 8px;
-            z-index: 5;
+            font-size: 1.2rem;
         }
         #status {
-            font-size: 2rem;
-            color: #0056b3;
-            text-align: center;
-            margin-top: 20px;
-        }
-        /* Progress Bar Styling */
-        .progress-container {
-            width: 100%;
-            max-width: 800px;
-            height: 25px;
-            background-color: #e0e0e0;
-            border-radius: 12px;
-            overflow: hidden;
-            margin-top: 20px;
-        }
-        .progress-bar {
-            height: 100%;
-            background-color: #0056b3;
-            width: 0%;
-            transition: width 0.3s ease;
-        }
-        /* Exercise Completed Page */
-        .completed-message {
-            font-size: 3rem;
-            color: #28a745;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .home-button {
             font-size: 1.5rem;
-            padding: 15px 30px;
-            background-color: #0056b3;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
-        .home-button:hover {
-            background-color: #003e8a;
+        #countdown {
+            font-size: 4rem;
         }
-    </style>
+        .completed-message {
+            font-size: 2rem;
+        }
+    }
+</style>
+
 </head>
 <body>
     <!-- Page 1: Exercise Selection -->
