--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -67,22 +67,56 @@
         button:hover {
             background-color: #ff3366;
         }
-        /* Dynamic Island Style */
+        /* Dynamic Island Style with Round Progress */
         .dynamic-island {
             position: absolute;
             top: 20px;
             left: 50%;
             transform: translateX(-50%);
-            padding: 10px 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            border-radius: 20px;
-            color: #fff;
-            font-size: 1.2rem;
-            font-weight: bold;
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            border-radius: 25px;
             z-index: 10;
+        }
+        .circle-progress {
+            position: relative;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .circle-progress svg {
+            transform: rotate(-90deg);
+            width: 100%;
+            height: 100%;
+        }
+        .circle-progress circle {
+            fill: none;
+            stroke-width: 8;
+        }
+        .circle-background {
+            stroke: #333;
+        }
+        .circle-foreground {
+            stroke: #ff007f;
+            stroke-dasharray: 188.4;
+            transition: stroke-dashoffset 0.3s;
+        }
+        .island-content {
+            margin-left: 10px;
+            text-align: left;
+        }
+        .island-content h2 {
+            font-size: 1.2rem;
+            margin: 0;
+        }
+        .island-content p {
+            font-size: 0.9rem;
+            color: #ccc;
         }
         /* Full-screen Video Styling */
         #video-container {
@@ -163,8 +197,19 @@
             <video id="webcam" autoplay playsinline></video>
             <canvas id="output"></canvas>
         </div>
-        <!-- Dynamic Island Counter -->
-        <div class="dynamic-island" id="counter">Exercise: 0</div>
+        <!-- Dynamic Island with Round Progress Bar -->
+        <div class="dynamic-island" id="counter">
+            <div class="circle-progress">
+                <svg>
+                    <circle class="circle-background" cx="30" cy="30" r="30"></circle>
+                    <circle class="circle-foreground" cx="30" cy="30" r="30" style="stroke-dashoffset: 188.4;"></circle>
+                </svg>
+                <div class="island-content">
+                    <h2 id="exercise-name">Exercise: 0</h2>
+                    <p id="exercise-count">Squats: 0</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Page 3: Exercise Completed -->
@@ -185,9 +230,12 @@
         const videoElement = document.getElementById('webcam');
         const canvasElement = document.getElementById('output');
         const canvasCtx = canvasElement.getContext('2d');
-        const counterElement = document.getElementById('counter');
+        const counterElement = document.getElementById('exercise-count');
+        const exerciseNameElement = document.getElementById('exercise-name');
+        const progressCircle = document.querySelector('.circle-foreground');
 
         let exercise, sets, repsPerSet, totalReps, currentReps, currentSet, stage;
+        const circleCircumference = 188.4; // Adjust based on circle radius in SVG
 
         function startExercise() {
             exercise = document.getElementById('exercise').value;
@@ -197,10 +245,16 @@
             currentSet = 1;
             stage = null;
 
+            exerciseNameElement.innerText = `Exercise: ${exercise.charAt(0).toUpperCase() + exercise.slice(1)}`;
             document.getElementById('question4').classList.remove('active');
             document.getElementById('exercisePage').classList.add('active');
 
             initializeExerciseTracking();
+        }
+
+        function updateProgress() {
+            const progress = (currentReps / repsPerSet) * circleCircumference;
+            progressCircle.style.strokeDashoffset = circleCircumference - progress;
         }
 
         function initializeExerciseTracking() {
@@ -277,6 +331,7 @@
                 stage = "down";
                 currentReps++;
                 counterElement.innerText = `${exercise.charAt(0).toUpperCase() + exercise.slice(1)}: ${currentReps}`;
+                updateProgress();
             }
         }
 
